# granular_render

./: .gitignore  CMakeLists.txt  README.md  build.sh  changelog.md
include/: config.hpp  renderer.hpp  thread_pool.hpp
scripts/: dovideo.sh  getPythonRGBColors.py
src/: main.cpp  renderer.cpp  thread_pool.cpp
